Remove --add-exports and most --add-opens.